# simple-android-ffmpeg-player

./: build.gradle  debug.keystore  gradle.properties  release.keystore  settings.gradle
Nostalgia/: build.gradle  gradle.properties
Nostalgia/src/androidTest/java/com/nirovision/nostalgia/: ExampleInstrumentedTest.java
Nostalgia/src/main/: AndroidManifest.xml
Nostalgia/src/main/cpp/: CMakeLists.txt
Nostalgia/src/main/cpp/include/ffmpeg/: config.h
Nostalgia/src/main/cpp/include/ffmpeg/libavutil/: timer.h
Nostalgia/src/main/cpp/src/: jni_bridge.cpp
Nostalgia/src/main/java/com/nirovision/nostalgia/: JniBridge.java
Nostalgia/src/test/java/com/nirovision/nostalgia/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/nirovision/nostalgiasample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nirovision/nostalgiasample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nirovision/nostalgiasample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
